--- a/experiencia.html
+++ b/experiencia.html
@@ -37,7 +37,8 @@
        <h2>Contacto: </h2>
        <div>
          <a>MAil: carolina.cardenas@gmail.com</a><br>
-         <a>FONO:+56988778876</a>
+         <a>FONO:+56988778876</a><br>
+         <a>DIRECCION: Mirador TenTen - Chiloé - Chile</a>
        </div>
      </footer>
   </body>
